@@ -1757,8 +1757,8 @@ TCL_CMD_HEADER( Rivet_InspectCmd )
  *
  *      log_error priority message
  *
- *        priority can be one of "emerg", "alert", "crit", "err",
- *            "warning", "notice", "info", "debug"
+ *        priority can be one of "emerg","alert","crit","err",
+ *                               "warning","notice","info","debug"
  *
  * Results:
  *      A message is logged to the Apache error log.
@@ -1773,7 +1773,7 @@ TCL_CMD_HEADER(Rivet_LogErrorCmd)
     server_rec *serverRec;
 
     int loglevelindex;
-    int  apLogLevel = 0;
+    int apLogLevel = 0;
 
     static CONST86 char *logLevel[] = {
         "emerg",
